<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="true"
        app:key="savepaths"
        app:summary="@string/save_path_summary"
        app:title="@string/save_paths" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="false"
        app:key="typeablepaths"
        app:summary="@string/typeable_paths_summary"
        app:title="@string/typeable_paths_title" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="false"
        app:key="texteditor_newstack"
        app:summary="@string/preference_newstack_summary"
        app:title="@string/preference_newstack_title" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="clear_open_file"
        app:summary="@string/clear_open_file_summary"
        app:title="@string/clear_open_file" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="extractpath"
        app:summary="@string/archive_summary"
        app:title="@string/archive_extract_folder"></Preference>
    <PreferenceCategory android:title="@string/advanced_search">

        <com.amaze.filemanager.ui.views.preference.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="regex"
            app:summary="@string/regular_expression_summary"
            app:title="@string/regular_expression" />
        <com.amaze.filemanager.ui.views.preference.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="matches"
            app:summary="@string/match_content_summary"
            app:title="@string/match_content" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/advanced">
        <com.amaze.filemanager.ui.views.preference.CheckBox
            app:defaultValue="false"
            app:key="legacyListing"
            app:summary="@string/legacy_listing_summary"
            app:title="@string/legacy_listing_title" />
        <com.amaze.filemanager.ui.views.preference.CheckBox
            app:defaultValue="false"
            app:key="rootmode"
            app:summary="@string/root_mode_summary"
            app:title="@string/root_mode" />
    </PreferenceCategory>
</PreferenceScreen>