<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showThumbs"
        app:summary="@string/thumb_summary"
        app:title="@string/thumb" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="false"
        app:key="showHidden"
        app:title="@string/hidden" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showLastModified"
        app:summary="@string/lastModifiedSummary"
        app:title="@string/lastModifiedPref" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showFileSize"
        app:summary="@string/size_pref_summary"
        app:title="@string/size_pref" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="false"
        app:key="goBack_checkbox"
        app:summary="@string/back_summary"
        app:title="@string/back_title" />
    <Preference
        app:key="dragAndDropPreference"
        app:title="@string/drag_and_drop_preference" />

    <PreferenceCategory app:title="@string/sidebar_preferences">
        <Preference
            app:key="sidebar_bookmarks"
            app:title="@string/show_bookmarks_pref" />
        <Preference
            app:key="sidebar_quick_access"
            app:title="@string/show_quick_access_pref" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced">

        <com.amaze.filemanager.ui.views.preference.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="false"
            app:key="showPermissions"
            app:summary="@string/root_pref_summary"
            app:title="@string/root_pref" />
    </PreferenceCategory>
</PreferenceScreen>