<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="theme"
        app:title="@string/theme" />

    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="circularimages"
        app:summary="@string/circular_images"
        app:title="@string/circular_icons" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="intelliHideToolbar"
        app:summary="@string/intellihide_toolbar_summary"
        app:title="@string/intellihide_toolbar_title" />
    <Preference
        app:key="columnsGrid"
        app:title="@string/gridcolumnno" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showDividers"
        app:title="@string/show_dividers" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showHeaders"
        app:title="@string/showHeaders" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="enableMarqueeFilename"
        app:title="@string/enable_marquee_filename" />
    <PreferenceCategory android:title="@string/color_title">
        <Preference
            app:key="selectcolorconfig"
            app:summary="@string/color_summary"
            app:title="@string/select_color_config" />
        <com.amaze.filemanager.ui.views.preference.CheckBox
            app:defaultValue="true"
            app:key="coloriseIcons"
            app:summary="@string/colorize_summary"
            app:title="@string/colorize" />
        <com.amaze.filemanager.ui.views.preference.CheckBox
            app:defaultValue="false"
            app:enabled="false"
            app:key="colorednavigation"
            app:summary="@string/colored_navigvation_sum"
            app:title="@string/colored_navigation" />
    </PreferenceCategory>
</PreferenceScreen>