<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/return_select"
        android:title="@string/select_intent"
        android:visible="false"
        />
    <item
        android:id="@+id/open_with"
        android:title="@string/open_with"
        />
    <item
        android:id="@+id/cut"
        android:title="@string/cut"
        android:icon="@drawable/ic_content_cut_white_36dp"
        />
    <item
        android:id="@+id/cpy"
        android:title="@string/copy"
        android:icon="@drawable/ic_content_copy_white_36dp"
    />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        />
    <item
        android:id="@+id/rename"
        android:title="@string/rename" />
    <item
        android:id="@+id/encrypt"
        android:title="@string/crypt_encrypt"
        android:visible="false" />
    <item
        android:id="@+id/decrypt"
        android:title="@string/crypt_decrypt"
        android:visible="false" />
    <item
        android:id="@+id/about"
        android:title="@string/properties"/>
    <item
        android:id="@+id/share"
        android:title="@string/share" />
    <item
        android:id="@+id/ex"
        android:title="@string/extract"
        android:visible="false"/>
    <item
        android:id="@+id/book"
        android:title="@string/add_to_bookmarks" />
</menu>