<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.amaze.filemanager.ui.views.preference.SelectedColorsPreference
        app:key="preselectedconfigs"
        app:title="@string/preselected_configs_title" />
    <PreferenceCategory app:title="@string/customize">
        <Preference
            app:key="skin"
            app:summary="@string/primary_color_summary"
            app:title="@string/primary_color_title" />
        <Preference
            app:key="skin_two"
            app:summary="@string/primary_two_summary"
            app:title="@string/primary_two_title" />
        <Preference
            app:key="accent_skin"
            app:summary="@string/accent_color_summary"
            app:title="@string/accent_color_title" />
        <Preference
            app:key="icon_skin"
            app:summary="@string/icon_color_summary"
            app:title="@string/icon_color_title" />
    </PreferenceCategory>
</PreferenceScreen>