<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/choose_ftp_port"
        android:title="@string/ftp_port_edit_menu_title"/>
    <item
        android:id="@+id/ftp_path"
        android:title="@string/ftp_path" />
    <item
        android:id="@+id/ftp_login"
        android:title="@string/ftp_login" />
    <item
        android:id="@+id/checkbox_ftp_secure"
        android:title="@string/ftp_status_secure_connection"
        android:checkable="true" />
    <item
        android:id="@+id/checkbox_ftp_readonly"
        android:title="@string/ftp_readonly"
        android:checkable="true" />
    <item
        android:id="@+id/ftp_timeout"
        android:title="@string/ftp_timeout" />
    <item
        android:id="@+id/checkbox_ftp_legacy_filesystem"
        android:title="@string/ftp_preference_saf_filesystem_title"
        android:checkable="true" />
</menu>