<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/open"
        android:title="@string/open" />
    <item
        android:id="@+id/backup"
        android:title="@string/backup" />
    <item
        android:id="@+id/unins"
        android:title="@string/uninstall" />
    <item
        android:id="@+id/properties"
        android:title="@string/properties" />
    <item
        android:id="@+id/play"
        android:title="@string/play" />
    <item
        android:id="@+id/share"
        android:title="@string/share" />
</menu>