<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="crypt_password"
        app:summary="@string/crypt_pref_master_password_summary"
        app:title="@string/crypt_pref_master_password_title"></Preference>
    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:enabled="false"
        app:key="crypt_fingerprint"
        app:summary="@string/crypt_pref_fingerprint_summary"
        app:title="@string/crypt_pref_fingerprint_title"></com.amaze.filemanager.ui.views.preference.CheckBox>
</PreferenceScreen>