<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="sidebar_bookmarks_enable"
        app:title="@string/show_bookmarks_pref_title" />

    <PreferenceCategory
        app:dependency="sidebar_bookmarks_enable"
        app:key="bookmarks_list"
        app:title="@string/show_bookmarks_pref">
        <Preference
            app:icon="@drawable/ic_baseline_add_24"
            app:key="add_bookmarks"
            app:order="999999999"
            app:title="@string/add_item" />
    </PreferenceCategory>
</PreferenceScreen>